--- a/joiningData.Rmd
+++ b/joiningData.Rmd
@@ -1,51 +1,62 @@
 # Join data {#joining}
 
-> For this class please read ch.13 on Relational Data from R for Data Science -- http://r4ds.had.co.nz/relational-data.html.
+> Prerequisite: Chapter 13 'Relational Data' from R for Data Science, available at http://r4ds.had.co.nz/relational-data.html.
 
-## Joining waves 1 and 2
+## Introduction to joining data
 
-I will start with joining data from waves 1 and 2 and then expand the algorithm to all the seven waves. First we need to read the data into R.
+When you work with data, it is rare that all the data you need will be confined to just one table. As a result, you will often find that you have to manipulate multiple data tables, or data frames. In order to do this, it helps to be able to join these multiple sources of data into just one table.
 
-I am using the function **read_tsv()** from the **readr** package here since the data are tab separated.
+This is very relevant for your assignment, as you are required to work with multiple waves of the Understanding Society data set. Without being able to join these waves together, you will struggle to analyse more than one wave at a time.
 
-```{r cache = TRUE}
-# First I attach the packages I will use later. You need to install these packages first.
+This class will teach you a number of ways to do this. We will start by joining just two waves together in the four ways introduced in Chapter 13 of R for Data Science into one, easy to work with, table. The next class will focus on joining multiple waves together at once.
+
+## Loading the data
+
+Before we join the waves together, we first need to read the individual waves into R. To do this, we need to use the function **read_tsv()** from the **readr** package, as the data are tab separated. We can load this by attaching the **tidyverse** package (you will need to install the tidyverse package first if you have not already done so, with the **install.packages()** function).
+
+```{r cache = TRUE, warning = FALSE, message = FALSE}
+# This code attaches the tidyverse package and then reads the first two waves of Understanding Society separately into R.
 library(tidyverse)
-library(data.table)
-library(reshape2)
 
 UndSoc1 <- read_tsv("data/UKDA-6614-tab/tab/us_w1/a_indresp.tab")
 UndSoc2 <- read_tsv("data/UKDA-6614-tab/tab/us_w2/b_indresp.tab")
 
 ```
 
-These are very large files that take a lot of space in the memory.
+You may have noticed that this took a lot longer to load into R than other data files you have used in the past. This is because the files themselves are large, and take up a lot of space in the memory. We can see just how much space they take up by using the **object.size()** command.
+
+```{r cache = TRUE}
+object.size(UndSoc1)
+object.size(UndSoc2)
+
+```
+
+However, this does not us an answer that we can easily interpret. Therefore, by using the **format()** command, we can specify how we want R to show us this data. In this case, by adding **units = ""** we can tell R to show us how large the files are in specific units.
 
 ```{r cache = TRUE}
 format(object.size(UndSoc1), units = "auto")
 format(object.size(UndSoc2), units = "auto")
+# By adding units = 'auto' R automatically chooses the clearest way to show us the size of the files.
 
 ```
 
-Before joining these two data frames I may want to select only the variables I need. These are:
+To make the files we are working with smaller, and thus make R carry out our analysis quicker, we can select only the variables we need for our analysis. We are only going to load a few variables here to keep this simple, you can always add more to your analysis. Here, as we are looking at level of interest in politics, they are:
 
-* **pidp**: this is the unique cross-wave individual number (in both waves),
+* **pidp**: this is the unique cross-wave individual number (in all waves)
 
-* **a_sex**: sex from wave 1,
+* **a_sex**: sex from wave 1
 
-* **a_dvage**: age from wave 1,
+* **a_dvage**: age from wave 1
 
-* **a_vote6**: level of interest in politics from wave 1,
+* **a_vote6**: level of interest in politics from wave 1
 
-* **b_sex**: sex from wave 2,
+* **b_sex**: sex from wave 2
 
-* **b_dvage**: age from wave 2,
+* **b_dvage**: age from wave 2
 
-* **b_vote6**: level of interest in politics from wave 2.
+* **b_vote6**: level of interest in politics from wave 2
 
-Note that for now I keep it intentionally simple.
-
-First I will edit both data sets to keep only the variables I need.
+By using what we learnt in the previous class, *Transforming Data*, we can edit both data sets to keep only the variables we need.
 
 ```{r cache = TRUE}
 UndSoc1ed <- UndSoc1 %>%
@@ -55,87 +66,81 @@ UndSoc2ed <- UndSoc2 %>%
 
 ```
 
-Note that these are much smaller objects.
+We can check that these are much smaller objects, and that our code was successful.
 
 ```{r cache = TRUE}
 format(object.size(UndSoc1ed), units = "auto")
 format(object.size(UndSoc2ed), units = "auto")
-
-```
-
-I then remove the larger data sets from the memory to free it up.
-
-```{r cache = TRUE}
-rm(UndSoc1, UndSoc2)
-```
-
-Let us explore the data.
-
-```{r cache = TRUE}
 head(UndSoc1ed)
 head(UndSoc2ed)
 
 ```
 
-Now we can join the data sets. As you know already, there can be several types of joins. Inner join will keep the observations that match in both data frames.
+As we no longer have any use for the original data we loaded into R, we can remove them from R to free up the memory they are unnecessarily taking up.
+
+```{r cache = TRUE}
+rm(UndSoc1, UndSoc2)
+```
+
+## Joining waves 1 and 2
+
+Now our data is ready for us to join the data sets. As you already know, there can be several types of joins. Here, we will use each of them to join the two waves of data together, and look at the differences between them. However, first it is important to understand how joining data works.
+
+### The 'key'
+
+When we join two data frames together, we have to choose which variable we want to join them by, known as the 'key'. As we are working with a data set that has an id number (the variable **pidp** in the data set) that is unique to each respondent, it makes sense to join the two waves we are using by this id number, so we can compare responses by each person in each wave of data. To do this, we use the **by = ""** command.
+
+### Inner join
+
+The first join we will use is the inner join. By using **inner_join()** we can join both waves together and keep the observations the are present in both data frames. This means that respondents who were in both waves 1 and 2 will be in our new data frame, but anyone who appeared in only wave 1 *or* wave 2 will be excluded.
 
 ```{r cache = TRUE}
 inner <- UndSoc1ed %>%
         inner_join(UndSoc2ed, by = "pidp")
 ```
 
-Note that I use the variable **pidp** as the key for joining.
+We can see that this has excluded a number of respondents from both waves 1 and 2 who only appeared in one wave and not the other, as we only have `r nrow(inner)` observations in the our new data frame compared to `r nrow(UndSoc1ed)` in UndSoc1, and `r nrow(UndSoc2ed)` in UndSoc2.
 
-The same result can be achieved with the function **merge** from base R.
+### Left join
 
-```{r cache = TRUE}
-inner2 <- UndSoc1ed %>%
-        merge(UndSoc2ed, by = "pidp")
-identical(as.data.frame(inner), inner2)
-```
-
-These two data frames are identical. Note the use of **as.data.frame()**. **inner** is a tibble and unless converted into a simple data frame it is not identical to **inner2** because of the differences in object type.
-
-Inner join will only retain individuals that are present in both waves. This is why we only have `r nrow(inner)` observations in the joined data compared to `r nrow(UndSoc1ed)` in wave 1. But do we want this? Imagine that the person is present in wave 1, does not participate in wave 2, but then re-appears in wave 3. We probably want to include such individuals as well.
-
-Left join will keep all individuals in wave 1 and only those in wave 2 that can be matched to them.
+However, we may not want to exclude all of the respondents who do not appear in both waves. If, for example, we were working with three waves of data and wanted to compare how the answers given by respondents in wave 1 changed over time, we would want to keep answers from people who were in waves 1 and 3, even if they were not in wave 2. To do this, we can use **left_join()**, which will keep answer from everyone who appeared in wave 1, and exlude answers from everyone who did not.
 
 ```{r cache = TRUE}
 left <- UndSoc1ed %>%
         left_join(UndSoc2ed, by = "pidp")
-# or, identically,
-# left <- UndSoc1ed %>%
-#         merge(UndSoc2ed, by = "pidp", all.x = TRUE)
 ```
 
-You can check that the number of individuals in wave 1 and the joined data frame is the same.
+To check we have done this correctly, we can compare the number of observations in *UndSoc1ed* and *left*, which should be the same. As we can see they each have `r nrow(left)` observations, we can be confident our new data frame has been created successfully. If any respondents appeared in wave 1 but not wave 2, their answers for wave 2 will show as 'NA' values. We can have a quick look at how this new data frame looks with **head**.
 
-Right join will keep all individuals from wave 2 and only those from wave 1 that can be matched to them.
+```{r cache = TRUE}
+head(left)
+```
+
+### Right join
+
+The command **right_join()** is very similar to **left_join()**, except that instead of keeping all the respondents who were in wave 1, this will keep all the respondents who appeared in wave 2 and exclude those who did not. Again, any respondents who appeared in wave 2 but not wave 1 will have their answers for wave 1 show as 'NA' values.
 
 ```{r cache = TRUE}
 right <- UndSoc1ed %>%
         right_join(UndSoc2ed, by = "pidp")
-# or, identically,
-# right <- UndSoc1ed %>%
-#         merge(UndSoc2ed, by = "pidp", all.y = TRUE)
+head(right)
 ```
 
-Usually I would want all the individuals from both waves to remain in the data set, no matter if they can be matched to other waves. If I need to exclude them from the analysis I prefer to do this manually. This can be achieved with full join.
+### Full join
+
+Usually, we would want all the respondents from both waves to remain in the data set, no matter if they appeared in the other waves or not. If we need to exclude any respondents from our analysis we can do this manually. We can do a full join with the **full_join()** command.
 
 ```{r cache = TRUE}
 full <- UndSoc1ed %>%
         full_join(UndSoc2ed, by = "pidp")
-# or, identically,
-# full <- UndSoc1ed %>%
-#          merge(UndSoc2ed, by = "pidp", all = TRUE)
 ```
 
-Note that **full** has `r nrow(full)` observations compared to  `r nrow(UndSoc1ed)` in wave 1 and `r nrow(UndSoc2ed)` in wave 2. This is because it includes a) all individuals that took part in both waves 1 and 2, b) those who took part in wave 1, but not in wave 2, c) those who missed wave 1 but joined the study in wave 2.
+By doing a full join, our new data frame has `r nrow(full)` observations compared to  `r nrow(UndSoc1ed)` in wave 1 and `r nrow(UndSoc2ed)` in wave 2. This is because it includes not only all the individuals that took part in *both* waves 1 and 2, but also those who only took part in either wave 1 *or* wave 2.
 
-Let us explore the joined data set.
+Now that we have joined two waves together, we could begin our analysis of these waves, if we had decided to just analyse the first couple of waves from the *Understanding Society* dataset.
 
 ```{r cache = TRUE}
 head(full)
 ```
 
-We have missing values for wave 1 variable for those people who joined in wave 2.
+If you wanted to work with more than just these two waves, you could manually join each new wave to our 'full' data frame. However, this is a slow and cumbersome process, so the next class will teach you how to join several waves of data together at once, using *iteration* and *loops*.
