--- a/joiningData.Rmd
+++ b/joiningData.Rmd
@@ -40,9 +40,9 @@ format(object.size(UndSoc2), units = "auto")
 
 ```
 
-To make the files we are working with smaller, and thus make R carry out our analysis quicker, we can select only the variables we need for our analysis. We are only going to load a few variables here to keep this simple, you can always add more to your analysis. Here, as we are looking at level of interest in politics, they are:
+To make the files we are working with smaller, and thus make R carry out our analysis quicker, we can select only the variables we need for our analysis. We are only going to load a few variables here to keep this simple; you can always add more to your analysis. Here, as we are looking at level of interest in politics, they are:
 
-* **pidp**: this is the unique cross-wave individual number (in all waves)
+* **pidp**: this is the id number given to each respondent to identify them in each wave
 
 * **a_sex**: sex from wave 1
 
@@ -103,7 +103,7 @@ We can see that this has excluded a number of respondents from both waves 1 and 
 
 ### Left join
 
-However, we may not want to exclude all of the respondents who do not appear in both waves. If, for example, we were working with three waves of data and wanted to compare how the answers given by respondents in wave 1 changed over time, we would want to keep answers from people who were in waves 1 and 3, even if they were not in wave 2. To do this, we can use **left_join()**, which will keep answer from everyone who appeared in wave 1, and exlude answers from everyone who did not.
+However, we may not want to exclude all of the respondents who do not appear in both waves. If, for example, we were working with three waves of data and wanted to compare how the answers given by respondents in wave 1 changed over time, we would want to keep answers from people who were in waves 1 and 3, even if they were not in wave 2. To do this, we can use **left_join()**, which will keep answer from everyone who appeared in wave 1, and exclude answers from everyone who did not.
 
 ```{r cache = TRUE}
 left <- UndSoc1ed %>%
